--- a/artshop.client/src/App.css
+++ b/artshop.client/src/App.css
@@ -5,3 +5,9 @@
     max-width: 100%;
     background-size: cover;
 }
+.image-carousel{
+    max-width: "1200px";
+    width: "100%";
+    aspect-ratio: "5 / 3";
+    margin: "0 auto";
+}
