--- a/artshop.client/src/Navbar.css
+++ b/artshop.client/src/Navbar.css
@@ -1,5 +1,6 @@
 *{
   box-sizing: border-box;
+  
 }
 
 body {
@@ -15,6 +16,10 @@ body {
     padding: 0.5rem;
     gap: 2rem;
     font-size: 1.2rem;
+    box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.259);
+    position: sticky;
+    top: 0px;
+    z-index: 99;
   }
 
   .navbar-left{
