--- a/artshop.client/src/App.css
+++ b/artshop.client/src/App.css
@@ -1,4 +1,13 @@
-﻿.banner-image {
+﻿@font-face {
+    font-family: "Lilita One";
+    src: local('Lilita One'), url(./assets/LilitaOne-Regular.ttf) format('truetype');
+    font-display: swap;
+}
+
+*{
+    font-family: Lilita One;
+}
+.banner-image {
     background-image: url('assets/banner.jpg');
     height: 200px;
     background-position: center;
@@ -11,3 +20,13 @@
     aspect-ratio: "5 / 3";
     margin: "0 auto";
 }
+.footer{
+    display: grid;
+    background-color: #F689A2;
+    color: #fff;
+    padding: 1rem;
+    height: 200px;
+    max-width: 100%;
+    place-items: center;
+}
+
