--- a/artshop.client/src/Navbar.css
+++ b/artshop.client/src/Navbar.css
@@ -14,7 +14,8 @@ body {
     background-color: #F689A2;
     color: #fff;
     padding: 0.5rem;
-    gap: 2rem;
+    padding-right: 1rem;
+    gap: 1rem;
     font-size: 1.2rem;
     box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.259);
     position: sticky;
