Added gallery page. Made home, shop, and gallery more reactive to screen size. Added item page when an item is clicked. Made item page reactive.

--- a/artshop.client/src/pages/Home.css
+++ b/artshop.client/src/pages/Home.css
@@ -1,14 +1,44 @@
 .image-carousel{
     width: 100%;
-    aspect-ratio: 5 / 3;
+    
     margin: 0 auto;
 }
 
 .shop-grid{
+    box-sizing: border-box;
     display: grid;
-    width: 100%;
+    width: 80%;
     gap: 20px 20px;
-    grid-template-columns: auto auto auto;
     justify-content: center;
     padding: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+    .shop-grid {
+        grid-template-columns: auto;
+    }
+
+    .image-carousel{
+        aspect-ratio: 1;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .shop-grid {
+        grid-template-columns: auto auto;
+    }
+
+    .image-carousel{
+        aspect-ratio: 3 / 2;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .shop-grid {
+        grid-template-columns: auto auto auto;
+    }
+
+    .image-carousel{
+        aspect-ratio: 5 / 2;
+    }
 }
